<resources>
    <string name="app_name">FinalProject CST2355</string>
    <string name="ma_TV">Created by: </string>
    <string name='author'>Zavar Siddiqui,  Marek La Roche,  Michael Hansen, Benjamin Dalton </string>
    <string name='searchCity_TM'>Enter a city name: </string>
    <string name="searchRadius_TM">Enter a search radius</string>
    <string name="tktMstr_Alert">Do you want to save this?</string>
    <string name="toast_message">No image found</string>
    <string name="toAudioButtonText">Audio Database</string>
    <string name="goToRecipe">Recipe Search</string>
    <string name="toCovid">Covid Data</string>
    <string name="recipeTitle">Recipe Search 1.0</string>
    <string name="recipeImageDescription">Recipe Image</string>
    <string name="recipeFavSaved">Added to favourites!</string>
    <string name="goToRecipeFavs">Go to favourites</string>
    <string name="ticketMaster">Ticket Master</string>
    <string name="covid">Covid-19 Data</string>
    <string name="open" >Open</string>
    <string name="close" >Close</string>
    <string name="recipeAuthor">Author: Zavar Siddiqui</string>
    <string name="directLink">Direct Link:</string>
    <string name="ingredientsTitle">List of Ingredients:</string>
    <string name="recipeHelp">Recipe Search Help</string>
    <string name="ticket_toast">Welcome to the ticket master search app</string>
    <string name="recipeHelpMessage">Search for a recipe by recipe name or by ingredients by typing in the respective fields and pressing "Enter". Your search term cannot contain spaces. You can search for more than one ingredient by separating each with a comma. Save a recipe to your favourites by clicking on the recipe and clicking the switch. </string>
    <string name="ok">OK</string>
    <string name="recipeSearchTitle">Search for a recipe…</string>
    <string name="byRecipeName">by name</string>
    <string name="byIngredients">by ingredients</string>
    <string name="backToRecipe">Back</string>
    <string name="backToRecipeSearch">Back to Search</string>
    <string name="searchAudioDBButton">Search</string>
    <string name="artistNameHint">Enter Artist Name</string>
    <string name="Favtitle">Favourite Recipes</string>
    <string name="home">Home</string>
    <string name="undo">UNDO</string>
    <string name="recipeFavRemoved">Removed from favourites!</string>
    <string name="help">Info</string>

    <string name="audioAuthor">Benjamin Dalton</string>

    <string name="audioHelpMessage">To use this page, search up an artist with the search bar, if they have spaces in their name you need to add an underscore in place of the space. This database does not have every artist.</string>
    <string name="audioDBResultsCount">results:</string>

    <string name="audioHelp">Audio DB Help</string>
    <string name="tktMstr_save">Save</string>
    <string name="tktMstr_empty_search">Please enter a City and Radius to complete your search</string>
    <string name="toTicketSave">Saved Events</string>
    <string name="tktMstr_delete_saved">Would you like to delete this event?</string>
    <string name="tktMstr_Yes">Yes</string>
    <string name="tktMstr_cancel">Cancel</string>

    <string name="ccountry_edit">COUNTRY</string>
    <string name="chelpButtonTitle">Welcome.</string>
    <string name="chelpButton1">To get search results start by entering a country and the dates into the edit texts,
        The results will have a default date if only the country is entered,
        You can save the results by date by clicking on the save button or saving the item,
        The clear button will clear all the information on the page,
        you can go see your saved data by clicking on "go to saved data".</string>
    <string name="chelpButton2"> The data here is stored in dates,
        Click on a date to view results,
        You can delete a date by long clicking on it,
        To go back to the previous page press "go back".</string>
    <string name="csaveButton">SAVE</string>
    <string name="cgoToSaved">GO TO SAVED DATA</string>
    <string name="cclearButton">CLEAR</string>
    <string name="csaveToastAll">Data saved successfully</string>
    <string name="csaveToastDate">Single date saved successfully</string>
    <string name="cinfo1">There are </string>
    <string name="cinfo2"> cases in </string>
    <string name="cinfo3"> as of </string>
    <string name="savedDateTitle">Saved Dates</string>
    <string name="savedDateInfo">Saved info by Date</string>
    <string name="cgoBack">GO BACK</string>
    <string name="ctoast1">The data on screen will be cleared</string>
    <string name="ctoast2">Delete this date?</string>
    <string name="ctoastBtn1">ACCEPT</string>
    <string name="ctoastBtn2">YES</string>
    <string name="calertBtnClose">CLOSE</string>
    <string name="calertBtnSave">SAVE</string>
    <string name="cymd">YYYY-MM-DD</string>


    <string name="tktMstr_Event">Event</string>
    <string name="tktMstr_date">Date</string>
    <string name="tktMstr_URL">URL</string>
    <string name="tktMstr_Type">Event</string>
    <string name="tktMstr_Cost">Price</string>
    <string name="tktMstr_by_mh">Ticket Master by M.Hansen</string>
    <string name="ticket_master_help_title">Help</string>
    <string name="tktMstr_Delete">Delete</string>
    <string name="tktMst_help_saved">Long click on a saved event. Select the delete button to delete \n and the cancel button to cancel</string>
    <string name="tktMstr_event_saved">Your event has been saved</string>
    <string name="tktMstr_main_help">Enter a city name, and the radius around the city you would like to search.
                                \npress the search icon and a list of events will appear in the list below.
                                \n long click on an event to see more details. If the event interests you you can save it
                                by clicking on the yes button. Once the event is saved it will disapear from the list.</string>



</resources>