<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">
        <!-- THIS IS WHAT IS VISIBLE ON SCREEN:-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activityM_TV1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ma_TV"
                android:gravity="center" />
            <TextView
                android:id="@+id/activityM_TV2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:gravity="center"
                android:textSize="13sp"
                />
            <Button
                android:id="@+id/toAudio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toAudioButtonText"

                />
            <Button
                android:id="@+id/toCovid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Covid Data"
                />
            <Button
                android:id="@+id/toRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goToRecipe"
                />
            <Button
                android:id="@+id/toTicket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ticket Master"
                />

        </LinearLayout>

        <!-- THIS IS WHAT IS WHAT POPS OUT FROM THE SIDE:-->
        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/header_layout"
            app:menu="@menu/nav_menu"
            android:id="@+id/nav_view"/>

    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>